# buggy_chess

./: CMakeLists.txt  README.md  SchaakStuk.cpp  SchaakStuk.h  chessboard.cpp  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h
